--- a/packaging/CHANGELOG
+++ b/packaging/CHANGELOG
@@ -1,3 +1,10 @@
+envirophat (0.0.6) stable; urgency=low
+
+  * Added __version__ to module
+  * Added DocStrings
+
+ -- Phil Howard <phil@pimoroni.com>  Thu, 10 Nov 2016 00:00:00 +0000
+
 envirophat (0.0.5) UNRELEASED; urgency=low
 
   * Bug fix to lsm303d raw_heading
