--- a/packaging/CHANGELOG
+++ b/packaging/CHANGELOG
@@ -1,7 +1,7 @@
 envirophat (1.0.0) stable; urgency=low
 
   * Fix: Defer setup to avoid import side-effects
-  * Fix: QNH changed to 1013.25 ISA standard
+  * Fix: QNH changed to ISA standard
   * Tweak: New Enviro pHAT I2C addr now default
   * Added: unit argument to pressure to choose Pa or hPa
 
